# embedded-serial-api

./: Cargo.toml
adl/: protocol.adl
cli-client/: Cargo.toml
cli-client/src/: .adl-manifest  commands.rs  main.rs
cli-client/src/adl/: mod.rs  protocol.rs
scripts/: adlc  generate-adl.sh
src/: commands.rs  main.rs
src/adl/: protocol.rs
src/adl/sys/: annotations.rs
ucontroller/: Cargo.toml
ucontroller/src/: main.rs
