[package]
name = "rust-cli-example"
version = "0.1.0"
authors = ["Tim Docker <tim@dockerz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
postcard = "0.5.0"
heapless = "0.5.5"
serialport = "3.3.0"
byteorder = "1.3.4"
fletcher = "0.1.0"

