[package]
name = "embedded-serial-api-ucontroller"
version = "0.1.0"
authors = ["Tim Docker <tim@dockerz.net>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5.2", features = ["rt", "stm32f103", "stm32-usbd" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
panic-semihosting = "0.5.2"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
usbd-webusb = "1.0.0"
embedded-hal = "0.2.4"
